--- a/README
+++ b/README
@@ -1,7 +1,12 @@
-Pour l'instat on a un fonctionnement plusto correct. il nous faut programmer la fin de partie Et definir la nature de L'IA 
-Objectif 
-** Avoir une version complete jouable en Console 
-** Avoir une version avec IA fonctionnel
-** Fixer les problemes de fin de partie 
-** Introduire les notions de couleur
-** la version graphique doit adopter un mode de jeux 
+# Dominos Game
+
+This game was created for my first year informatic project. 
+
+### Requierment
+* Numpy
+* PyQt5
+* Pyton 3.8
+
+### Run
+cd consoleApp/
+python jeuxUI.py
